# python-lifecycle-training

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  authors.html  black.html  config.py  contributing.html  coverage.html  dynaconf.html  editorconfig.html  fire.html  flake8.html  genindex.html  gh-actions.html  gh-pages.html  index.html  isort.html  loguru.html  modules.html  mypy.html  objects.inv  pre-commit.html  pypi.html  pypi_release_checklist.html  pyproject.toml  pytest-cov.html  pytest.html  python_lifecycle_training.calculator.html  python_lifecycle_training.html  readme.html  search.html  searchindex.js  setup.cfg  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: gh-pages.yml  master-python-package.yml  python-package.yml  upload-python-package.yml
_sources/: index.rst.txt  pypi_release_checklist.rst.txt  python_lifecycle_training.calculator.rst.txt
_sources/_sources/: black.rst.txt  coverage.rst.txt  fire.rst.txt  modules.rst.txt  pypi_release_checklist.rst.txt  pytest-cov.rst.txt  python_lifecycle_training.rst.txt
_sources/_sources/deployment/: sphinx.rst.txt
_sources/_sources/miscellaneous/: cookiecutter.rst.txt
_sources/_sources/setup/: pytest.rst.txt
_sources/deployment/: gh-pages.rst.txt
_sources/initialization/: pre-commit.rst.txt
_sources/miscellaneous/: cookiecutter.rst.txt
_sources/setup/: coverage.rst.txt  loguru.rst.txt
configs/: settings.yaml
deployment/: gh-actions.html  gh-pages.html  pypi.html  sphinx.html
deployment/deployment/: gh-actions.html  gh-pages.html  pypi.html  sphinx.html
docs/: .gitignore  conf.py  coverage.rst  dynaconf.rst  flake8.rst  gh-pages.rst  index.rst  loguru.rst  mypy.rst  pre-commit.rst  pypi_release_checklist.rst  pytest.rst  sphinx.rst  tox.rst  tutorial.rst
docs/deployment/: gh-actions.rst  pypi.rst
docs/initialization/: black.rst  flake8.rst  mypy.rst
docs/miscellaneous/: gh-issue-templates.rst
docs/setup/: coverage.rst  dynaconf.rst  pytest-cov.rst  tox.rst
initialization/: black.html  editorconfig.html  flake8.html  isort.html  mypy.html  pre-commit.html
initialization/initialization/: black.html  editorconfig.html  flake8.html  isort.html  mypy.html  pre-commit.html
miscellaneous/: cookiecutter.html  gh-issue-templates.html
miscellaneous/miscellaneous/: cookiecutter.html  gh-issue-templates.html
python_lifecycle_training/: __init__.py
python_lifecycle_training/calculator/: broken.py  cli.py  complex.py  simple.py
setup/: coverage.html  dynaconf.html  fire.html  loguru.html  pytest-cov.html  pytest.html  tox.html
setup/setup/: coverage.html  dynaconf.html  fire.html  loguru.html  pytest-cov.html  pytest.html  tox.html
tests/: test_python_lifecycle_training.py
tests/calculator/: test_broken.py  test_cli.py  test_complex.py  test_simple.py
